class LibraryError(Exception):
    """Base exception for expected library business-rule failures."""
